# repos

./: .gitignore  README.md  STATUS.md  l_shape_scene.xml  main.py  main_backup.py  notebook.ipynb  pyproject.toml  pytest.ini  requirements.txt  run_memetic_pipeline.py  run_tests.py
configs/: memetic_hparam_sweep.example copy.json  memetic_hparam_sweep.example.json  memetic_pipeline_config copy.json  memetic_pipeline_config.json
docs/: README.md  memetic_fusion_pipeline.md
docs/architecture/: CHANGELOG.md  INTEGRATION_SUMMARY.md  PROJECT_STRUCTURE.md  UPDATE_SUMMARY.md  WORKLOG_2026-02-25.md
docs/guides/: INSTALL.md  QUICKREF.md  (+3 more)
examples/: config_example.py  full_comparison.py  full_comparison_1ap.py  full_comparison_2ap.py  optimizer_factory_example.py  quick_comparison_test.py  quick_grid_test.py  quick_test.py  ray_experiment_runner.py  ray_experiment_runner_config.example.json  ray_experiment_runner_config.smoke_test.json  ray_hparam_tuning.py  ray_hparam_tuning_config.example.json  ray_parallel_example.py  ray_parallel_example_good.py  ray_parallel_example_good1.py  ray_parallel_example_gsgd.py  ray_parallel_example_old.py  ray_parallel_sweep_config.example.json  ray_parallel_sweep_config.seeds5_10.json  ray_parallel_sweep_runner.py  run_ga_modular.py  test_optimizer_factory.py
notebooks/: building_floor copy.ipynb  building_floor.ipynb  building_floor_base.ipynb  reflector_control.ipynb  results_analysis.ipynb
scripts/: monitor_ray_run.sh  run_memetic_hparam_sweep.py
tests/: README.md  __init__.py  conftest.py  test_base_optimizer.py  test_gradient_descent.py  test_grid_search.py  test_memetic_bridge.py  test_memetic_loss.py  test_metrics.py  test_optimizer_factory.py
(+56 files in other folders)
